# adventofcode2023

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  new.txt  old.txt  pyproject.toml
adventofcode/: 02.py  03.py  04.py  05.py  06.py  08.py  09.py  10.py  12_debug.py  13.py  16.py  24.py  __init__.py  notebook12.ipynb
adventofcode/01/: 01.py
adventofcode/07/: 07.py
adventofcode/10/: 10.py  main.py
adventofcode/11/: 11.py  main.py
adventofcode/12/: 12.py  compare.ipynb  notebook12.ipynb
adventofcode/14/: 14.py
adventofcode/15/: 15.py  main.py
adventofcode/16/: main.py
adventofcode/17/: 17.excalidraw  aux.py  connections.json  debug.py  main.py  test.ipynb
adventofcode/18/: main.py
adventofcode/19/: main.py
adventofcode/20/: main.py
adventofcode/21/: main.py
adventofcode/helper/: io.py
adventofcode/helper/template/: copy_files.py
